--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,6 +29,8 @@
       </div>
 
       <div class="footer-col footer-col-3">
+        <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+
         <p>{{ site.description }}</p>
       </div>
     </div>
