--- a/css/slate/stylesheet.css
+++ b/css/slate/stylesheet.css
@@ -1,53 +1,25 @@
-@import "rouge-github";
-
 /*******************************************************************************
-MeyerWeb Reset
+Slate Theme for GitHub Pages
+by Jason Costello, @jsncostello
 *******************************************************************************/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+@import url(normalize.css);
+@import url(pygment_trac.css);
 
 /*******************************************************************************
 Theme Styles
 *******************************************************************************/
 
-body {
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+body {
   color:#373737;
   background: #212121;
-  font-size: 16px;
+  font-size: 18px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
@@ -89,6 +61,7 @@ h6 {
 }
 
 p {
+  font-size: 18px;
   margin: 10px 0 15px 0;
 }
 
@@ -98,31 +71,18 @@ footer p {
 
 a {
   text-decoration: none;
-  color: #0F79D0;
+  color: #007edf;
   text-shadow: none;
-
-  transition: color 0.5s ease;
-  transition: text-shadow 0.5s ease;
-  -webkit-transition: color 0.5s ease;
-  -webkit-transition: text-shadow 0.5s ease;
-  -moz-transition: color 0.5s ease;
-  -moz-transition: text-shadow 0.5s ease;
-  -o-transition: color 0.5s ease;
-  -o-transition: text-shadow 0.5s ease;
-  -ms-transition: color 0.5s ease;
-  -ms-transition: text-shadow 0.5s ease;
 }
 
-a:hover, a:focus {
-  text-decoration: underline;
-}
+a:hover, a:focus {text-decoration: underline;}
 
 footer a {
   color: #F2F2F2;
   text-decoration: underline;
 }
 
-em, cite {
+em {
   font-style: italic;
 }
 
@@ -155,6 +115,7 @@ p img {
 }
 
 pre, code {
+  width: 100%;
   color: #222;
   background-color: #fff;
 
@@ -164,18 +125,18 @@ pre, code {
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
+
+  box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 
 pre {
   padding: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
   overflow: auto;
 }
 
 code {
   padding: 3px;
   margin: 0 3px;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 
 pre code {
@@ -185,25 +146,14 @@ pre code {
 
 blockquote {
   color: #666;
-  margin-bottom: 20px;
-  padding: 0 0 0 20px;
+  margin: 0 0 20px 2px;
+  padding-left: 20px;
   border-left: 3px solid #bbb;
+  font-style: italic;
 }
-
 
 ul, ol, dl {
-  margin-bottom: 15px
-}
-
-ul {
-  list-style-position: inside;
-  list-style: disc;
-  padding-left: 20px;
-}
-
-ol {
-  list-style-position: inside;
-  list-style: decimal;
+  margin: 0 0 15px 0;
   padding-left: 20px;
 }
 
@@ -212,7 +162,8 @@ dl dt {
 }
 
 dl dd {
-  padding-left: 20px;
+  margin-left: 0;
+  padding-left: 0;
   font-style: italic;
 }
 
@@ -283,11 +234,6 @@ Full-Width Styles
 
 #header_wrap {
   background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(to top, #373737, #212121);
 }
 
 #header_wrap .inner {
@@ -363,17 +309,9 @@ Full-Width Styles
   background: #212121;
 }
 
-
-
 /*******************************************************************************
 Small Device Styles
 *******************************************************************************/
-
-@media screen and (max-width: 992px) {
-  img {
-    max-width: 100%;
-  }
-}
 
 @media screen and (max-width: 480px) {
   body {
@@ -418,57 +356,8 @@ Small Device Styles
   }
 
   code, pre {
+    min-width: 320px;
+    max-width: 480px;
     font-size: 11px;
   }
-
-}
-
-@media screen and (max-width: 320px) {
-  body {
-    font-size:14px;
-  }
-
-  #downloads {
-    display: none;
-  }
-
-  .inner {
-    min-width: 240px;
-    max-width: 320px;
-  }
-
-  #project_title {
-  font-size: 28px;
-  }
-
-  h1 {
-    font-size: 24px;
-  }
-
-  h2 {
-    font-size: 21px;
-  }
-
-  h3 {
-    font-size: 18px;
-  }
-
-  h4 {
-    font-size: 16px;
-  }
-
-  h5 {
-    font-size: 14px;
-  }
-
-  h6 {
-    font-size: 12px;
-  }
-
-  code, pre {
-    min-width: 240px;
-    max-width: 320px;
-    font-size: 11px;
-  }
-
 }
