--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,12 @@
     gtag('js', new Date());
     gtag('config', 'UA-15769226-1');
   </script>
+  
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-5753827143094664",
+          enable_page_level_ads: true
+     });
+  </script>
 </head>
