--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,4 +13,13 @@ layout: default
   </div>
 
   {% include disqus_comments.html %}
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <ins class="adsbygoogle"
+      style="display:inline-block;width:468px;height:60px"
+      data-ad-client="ca-pub-5753827143094664"
+      data-ad-slot="6926834942"></ins>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </article>
