--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,11 +14,12 @@ layout: default
 
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <ins class="adsbygoogle"
-      style="display:inline-block;width:468px;height:60px"
-      data-ad-client="ca-pub-5753827143094664"
-      data-ad-slot="6926834942"></ins>
+       style="display:block"
+       data-ad-client="ca-pub-5753827143094664"
+       data-ad-slot="6403137348"
+       data-ad-format="auto"></ins>
   <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
+  (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 
   {% include disqus_comments.html %}
