--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -132,7 +132,7 @@ code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-//    background-color: #eef;
+    background-color: #eee;
 }
 
 code {
@@ -142,6 +142,7 @@ code {
 pre {
     padding: 8px 12px;
     overflow-x: auto;
+	background-color: #eee;
 
     > code {
         border: 0;
