--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,15 +1,16 @@
 ---
 layout: default
 ---
+<h1 class="page-heading">{{ page.title }}</h1>
 
 <ul class="post-list">
-    {% for post in site.categories[page.title] %}
-    <li>
-      <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+  {% for post in site.categories[page.title] %}
+  <li>
+    <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
 
-      <h2>
-        <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-      </h2>
-    </li>
+    <h2>
+      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+    </h2>
+  </li>
   {% endfor %}
 </ul>
