category와 메인이 같게

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,12 +5,11 @@ layout: default
 
 <ul class="post-list">
   {% for post in site.categories[page.title] %}
-  <li>
-    <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
+  <ul>
+    <h4 class="post-meta">{{ post.date | date: "%Y/%m/%d" }}</h4>
     <h2>
       <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
     </h2>
-  </li>
+  </ul>
   {% endfor %}
 </ul>
